<resources>
    <string name="appName">Unbox Parity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_unbox_parity" translatable="false">UnboxParityActivity</string>

    <!--about AdMob-->
    <string name="admob_app_id" translatable="false">ca-app-pub-9406365381643944~8457216272</string>
    <string name="test_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="video_banner_id" translatable="false">ca-app-pub-9406365381643944/9120750625</string>
    <string name="article_banner_id" translatable="false">ca-app-pub-9406365381643944/8935674522</string>
    <string name="parity_banner_id" translatable="false">ca-app-pub-9406365381643944/7952807489</string>

    <!--about facebook-->
    <string name="facebook_app_id">2542636175809491</string>
    <string name="fb_login_protocol_scheme">fb2542636175809491</string>

    <!--Common Strings-->
    <string name="txt_ok">OK</string>
    <string name="txt_waiting">Please Waiting</string>
    <string name="txt_rate">Rate: %1$s</string>
    <string name="msg_rate">If you enjoy using %1$s, please take a moment to rate it. Thanks for your support!</string>
    <string name="txt_give_comment">Give comment</string>
    <string name="txt_remind_later">Remind me later</string>
    <string name="txt_no_thanks">I have already done</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_retry">Retry</string>

    <!--MainActivity-->
    <string name="txt_network_check">Network Check</string>
    <string name="msg_network_check">Please confirm the network connection status.</string>

    <!--MainActivityFragment-->
    <string name="txt_load_data">Load Data…</string>
    <string name="txt_login_anonymous">Log in Anonymously</string>
    <string name="msg_disallow_youtube_permission">Reject youtube permission, app will close</string>
    <string name="txt_login_failed">User login failed</string>

    <!--UnboxParityActivity-->
    <string name="txt_search_tab">Search</string>
    <string name="txt_video_tab">Video</string>
    <string name="txt_article_tab">Article</string>
    <string name="txt_parity_tab">Parity</string>
    <string name="txt_setting_tab">Setting</string>
    <string name="txt_need_search_first">Please do search before seeing the results.</string>
    <string name="msg_ask_user_leave_app">If you want to exit app, press back again.</string>

    <!--SearchFragment-->
    <string name="txt_search_hint">Search Product</string>
    <string name="msg_voice_search">Voice Searching...</string>

    <!--VideoFragment-->
    <string name="txt_give_recommendation">Give Recommendation</string>
    <string name="txt_retract_recommendation">Retract Recommendation</string>
    <string name="txt_video_view_count">View Count</string>
    <string name="txt_video_upload_time">Upload Time</string>
    <string name="txt_video_recommend_count">Recommend Count</string>

    <!--ArticleFragment-->
    <string name="txt_previous_page">Previous Page</string>
    <string name="txt_close_page">Close Page</string>
    <string name="txt_next_page">Next Page</string>
    <string name="txt_go_browser">Go Browser</string>

    <!--ParityFragment-->
    <string name="txt_not_found_parity">Not found any parity results</string>
    <string name="txt_go_platform">Go Platform</string>
    <string name="txt_relative_degree">Relative</string>
    <string name="txt_price_low_to_high">$Low to High</string>
    <string name="txt_price_high_to_low">$High to Low</string>

    <!--SettingFragment-->
    <string name="txt_app_instruction">APP Instruction</string>
    <string name="txt_user_logout">Logout</string>
    <string name="txt_recent_search_keyword">Recent search keywords:</string>

    <!--IntroFragment-->
    <string name="txt_get_start">Get Start</string>

    <!--ScanFragment-->
    <string name="msg_ocr_fail">OCR failed. Please try again</string>
    <string name="msg_perform_text_recognition">Performing text recognition...</string>
</resources>
