<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/txt_search_tab"/>

    <item
            android:id="@+id/navigation_video"
            android:icon="@drawable/ic_video_black_24dp"
            android:title="@string/txt_video_tab"/>

    <item
            android:id="@+id/navigation_article"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/txt_article_tab"/>

    <item
            android:id="@+id/navigation_parity"
            android:icon="@drawable/ic_compare_black_24dp"
            android:title="@string/txt_parity_tab"/>

    <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/txt_setting_tab"/>

</menu>
