<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="curOrderStatus"
                type="Integer" />

        <variable
                name="curPageNum"
                type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/activity_main"
            tools:context=".view.ui.parity.ParityFragment">

        <ImageView
                android:id="@+id/noDataImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_no_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/noDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_need_search_first"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/noDataImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
                android:id="@+id/noResultImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_not_found"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/noResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_not_found_parity"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/noResultImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/noDataGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="noDataImage, noDataText"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/noResultGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="noResultImage, noResultText"/>

        <LinearLayout
                android:id="@+id/filterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/relativeBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_relative_degree"
                    app:convertRelativeOrder="@{curOrderStatus}"
                    tools:background="@drawable/btn_parity_order_selector"
                    tools:textColor="@color/color_parity_order_btn_selector"/>

            <Button
                    android:id="@+id/low2highBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/txt_price_low_to_high"
                    app:convertLow2HighOrder="@{curOrderStatus}"
                    tools:background="@drawable/btn_parity_order_selector"
                    tools:textColor="@color/color_parity_order_btn_selector"/>

            <Button
                    android:id="@+id/high2lowBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_price_high_to_low"
                    app:convertHighToLowOrder="@{curOrderStatus}"
                    tools:background="@drawable/btn_parity_order_selector"
                    tools:textColor="@color/color_parity_order_btn_selector"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/parityView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/filterLayout"
                app:layout_constraintBottom_toTopOf="@+id/pageControlLayout"/>

        <LinearLayout
                android:id="@+id/pageControlLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/previousBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_previous_page"
                    android:background="@drawable/btn_parity_order_selector"
                    android:textColor="@color/color_parity_order_btn_selector"
                    tools:background="@drawable/btn_parity_order_selector"
                    tools:textColor="@color/color_parity_order_btn_selector"/>

            <TextView
                    android:id="@+id/pageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    app:convertPageNum="@{curPageNum}"
                    tools:text="12"
                    android:textSize="22sp"/>

            <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_next_page"
                    android:background="@drawable/btn_parity_order_selector"
                    android:textColor="@color/color_parity_order_btn_selector"
                    tools:background="@drawable/btn_parity_order_selector"
                    tools:textColor="@color/color_parity_order_btn_selector"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/parityGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="filterLayout, parityView, pageControlLayout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>