<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="curDateRange"
                type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/activity_main"
            tools:context=".view.ui.article.ArticleFragment">

        <ImageView
                android:id="@+id/noDataImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_no_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/noDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_need_search_first"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/noDataImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/noDataGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="noDataImage, noDataText"/>

        <com.hsuanparty.unbox_parity.view.customized.AndroidSegmentedControlView
                android:id="@+id/segmentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                app:ascv_defaultSelection="0"
                app:ascv_unselectedTextColor="@color/dim_gray"
                app:ascv_selectedTextColor="@color/white"
                app:ascv_selectedColor="@color/green"
                app:ascv_unselectedColor="@color/white"
                app:ascv_equalWidth="true"
                app:ascv_stretch="true"
                app:ascv_items="@array/article_state_option"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/segmentView"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <WebView
                android:id='@+id/webView'
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/webControlLayout"/>

        <!--上一頁/下一頁/關閉/前往瀏覽器 button-->
        <LinearLayout
                android:id="@+id/webControlLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="65dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/previousBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_web_control_selector"
                    android:text="@string/txt_previous_page"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:visibility="gone"/>

            <Button
                    android:id="@+id/closeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_web_control_selector"
                    android:text="@string/txt_close_page"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"/>

            <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_web_control_selector"
                    android:text="@string/txt_next_page"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:visibility="gone"/>

            <Button
                    android:id="@+id/browserBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_web_control_selector"
                    android:text="@string/txt_go_browser"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/articleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="segmentView"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/webGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="webControlLayout, webView"
                android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>